--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <application
-        android:name="Firebase Notification"
+        android:label="FCM"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
